[FIX] sap.f.GridList: Align group header font size with design specification
Change the group header font size to use CSS custom property "--sapFontHeader5Size", instead of a fixed value.
SNOW: DINC0772715

--- a/src/sap.f/src/sap/f/themes/base/GridList.less
+++ b/src/sap.f/src/sap/f/themes/base/GridList.less
@@ -62,7 +62,7 @@
 		width: 100%;
 
 		& .sapMGHLITitle {
-			font-size: 1.125rem;
+			font-size: var(--sapFontHeader5Size);
 			color: var(--sapGroup_TitleTextColor);
 		}
 	}
